# reactos

base/applications/: CMakeLists.txt
base/applications/roslauncher/: CMakeLists.txt  resource.h  roslauncher.cpp  roslauncher.rc
base/applications/roslogger/: CMakeLists.txt  roslogger.cpp  roslogger.rc  stacktrace.cpp
base/setup/usetup/: CMakeLists.txt  cabinet.c  consup.c  format.c  format.h  inffile.h  usetup.c  usetup.h
base/setup/usetup/interface/: consup.c  devinst.c  usetup.c
base/shell/explorer/: resource.h  trayntfy.cpp  traywnd.cpp
base/system/userinit/: livecd.c  resource.h  userinit.h
base/system/userinit/lang/: bg-BG.rc  (+26 more)
boot/bootdata/: autorun.inf  txtsetup.sif
dll/shellext/netshell/: lanconnectui.cpp  lanconnectui.h  precomp.h
dll/win32/browseui/: CProgressDialog.cpp  CProgressDialog.h  addressband.cpp  addresseditbox.cpp  basebarsite.cpp  desktopipc.cpp  explorerband.cpp  internettoolbar.cpp  shellbrowser.cpp
dll/win32/comctl32/: imagelist.c
dll/win32/netcfgx/: inetcfgcomp_iface.c  netcfg_iface.c
dll/win32/propsys/: propsys_classes.rgs  propsys_main.c
dll/win32/shell32/: CDefaultContextMenu.cpp  shfldr.h
media/: CMakeLists.txt
modules/: CMakeLists.txt
ntoskrnl/config/: cmsysini.c  ntapi.c
ntoskrnl/ex/: init.c
ntoskrnl/io/iomgr/: driver.c
ntoskrnl/io/pnpmgr/: pnpinit.c  pnpreport.c
sdk/cmake/: CMakeMacros.cmake
sdk/include/psdk/: propsys.idl
sdk/include/reactos/: rosctrls.h  shellutils.h  undocshell.h
sdk/lib/atl/: atlwin.h
sdk/lib/rtl/: actctx.c
win32ss/gdi/eng/: engobjects.h
win32ss/gdi/ntgdi/: dclife.c  font.c  font.h  freetype.c  text.c  text.h
win32ss/user/ntuser/: desktop.c
(+16 files in other folders)
